added neo's autoexec 'neo.cfg'

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -86,6 +86,10 @@ bind "SHIFT" "+speed"
 
 bind "CTRL" "+duck"
 
+bind "/" "+quickswitch"
+	alias "+quickswitch" "slot3;cl_righthand 0;playcrosshair"
+	alias "-quickswitch" "slot2;slot1 ;cl_righthand 0;playcrosshair"
+
 bind "F5" "jpeg"
 
 bind "F6" "save quick"
@@ -207,6 +211,7 @@ echo " ___re  (start)       ___ "
 echo " ___sv  (_cheats)     ___ "
 echo " ___exe (autoexec)    ___ "
 echo " ___esc (disconnect)  ___ "
+echo " ___mappredict        ___ "
 echo " ___                  ___ "
 echo " ___modes:            ___ "
 echo " ___casual            ___ "
